tests/snapshots/oracle_trace_v1__brew_install_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                            command │ brew install foo
  74: (rule                                         │
        (command "brew")                            │
        (args                                       │
          (cond                                     │
            ((positional "install")                 │ "install" = "install" → yes
             (effect                                │ → :deny "Package installation not allowed"
               :deny                                │
               "Package installation not allowed")) │
            ((positional (or "list"                 │ "install" = "list" → no
                             "search"))             │ "install" = "search" → no
             …))))                                  │

Result

  brew install foo

  → :deny "Package installation not allowed"

  config: <config-path>
