tests/snapshots/oracle_trace_v1__cargo_build_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                  command │ cargo build
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                   ((or "install"         │
                        "uninstall")      │
                    (effect :deny))       │
                   ((or "build"           │
                        "b"               │
                        …                 │
                        "clippy")         │
                    (effect :allow)))     │ → :allow
                 (effect :allow)))))      │

Result

  cargo build

  → :allow

  config: <config-path>
