tests/snapshots/oracle_trace_v1__cargo_flags_only_raw.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

[1mTrace[0m

                             [2mcommand[0m [2m│[0m [1mcargo --list[0m
  [2m95: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"cargo"[0m[2m)[0m        [2m│[0m
        [2m([0m[34margs[0m [2m([0mor [2m([0m[34mwhen[0m [2m([0m[34mexact[0m[2m)[0m      [2m│[0m
                    [2m([0m[34meffect[0m [38;2;120;120;255m:allow[0m[2m)[0m[2m)[0m [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m
                  [2m…[0m[2m)[0m[2m)[0m[2m)[0m               [2m│[0m

[1mResult[0m

  [4;32mcargo --list[0m

  [2m→[0m [1;32m:allow[0m

  config: <config-path>
