tests/snapshots/oracle_trace_v1__cargo_flags_only_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

  parser: gnu │

                          command │ cargo --list
  95: (rule (command "cargo")     │
        (args (if (exact)         │
                  (effect :allow) │ → :allow
                …)))              │

Result

  cargo --list

  → :allow

  config: <config-path>
