tests/snapshots/oracle_trace_v1__cargo_install_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

  parser: gnu │

                                  command │ cargo install foo
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                   ((or "install"         │
                        "uninstall")      │
                    (deny))               │ → :deny
                   ((or "build"           │
                        "b"               │
                        …                 │
                        "clippy")         │
                    (allow)))             │
                 (effect :deny)))))       │

Result

  cargo install foo

  → :deny

  config: <config-path>
